One sneaky class that needed changing

--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -3133,7 +3133,7 @@ border-top-color: #912;
     background-color: transparent !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
+.progressBar-3fV-Dd[style*="background-color: var(--brand-500);"] {
     background-color: #912 !important;
 }
 
