--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -1004,7 +1004,7 @@ textarea,
     background-color: transparent !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
+.progressBar-3fV-Dd[style*="background-color: var(--brand-500);"] {
     background-color: #008c99 !important;
 }
 
