--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2027,7 +2027,7 @@
 }
   
 /* Progress Fill */
-.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
+.progressBar-3fV-Dd[style*="background-color: var(--brand-500);"] {
     background-color: #f3acc5 !important;
 }
 
