--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -1279,7 +1279,7 @@
   background-color: transparent !important;
 }
 
-.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
+.progressBar-3fV-Dd[style*="background-color: var(--brand-500);"] {
   background-color:  #9b2742 !important; 
 }
 
