--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -1996,7 +1996,7 @@
 }
   
 /* Progress Fill */
-.progressBar-1T6LYX[style*="background-color: rgb(88, 101, 242);"] {
+.progressBar-3fV-Dd[style*="background-color: var(--brand-500);"] {
     background-color: #6cb4fe !important;
 }
 
