--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -6,7 +6,7 @@
  */
 
  .app-2CXKsg {
-    background-image: url(https://images8.alphacoders.com/767/767470.jpg);
+    background-image: url(https://cdn.discordapp.com/attachments/1055491475913318420/1122183368268857364/1307348.png);
     background-size: cover;
     background-color: transparent;
 }
