--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 4.9
+ * @version 5
  */
 
 /* Main Background */
@@ -1153,7 +1153,9 @@
     background-color: rgba(0,0,0,.2);
 }
 
-.premiumCategorySelected-2KWLhN, .premiumCategorySelected-2KWLhN:hover, .stickerCategoryGenericSelected-DnO2K8, .stickerCategoryGenericSelected-DnO2K8:hover {
+.premiumCategorySelected-2KWLhN, .premiumCategorySelected-2KWLhN:hover, .stickerCategoryGenericSelected-DnO2K8, .stickerCategoryGenericSelected-DnO2K8:hover,
+.firstPartyCategorySelected-2zQ3yM,
+.firstPartyCategorySelected-2zQ3yM:hover {
     background-color: #2AB;
 }
 
@@ -2537,19 +2539,19 @@
 	border-radius: 5px;
 }
 
-.reactionBtn-3I19bq.forceShowLook-1zmTr- {
+.reactionBtn-fVdJIx.forceShowLook-1zmTr- {
     background-color: rgba(34, 170, 187, .4);
     border-radius: 4px;
     border: 2px solid transparent;
 }
 
-.reactionBtn-3I19bq.forceShowLook-1zmTr-:hover {
+.reactionBtn-fVdJIx.forceShowLook-1zmTr-:hover {
     background-color: rgba(17, 187, 204, .4);
     border-color: #1BC;
 }
 
-.icon-1q31jb,
-.reactionBtn-3I19bq {
+.icon-fX2J7U,
+.reactionBtn-fVdJIx {
 	color: white !important;
 }
 
@@ -2935,7 +2937,7 @@
 }
 
 /* Newest or Classes That I Have Not Collected Yet */
-.theme-dark .directoryModal-YJsOMv {
+.theme-dark .directoryContainer-z-0pgp {
     background-color: rgba(0, 0, 0, .5);
 }
 
