--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 2.4
+ * @version 2.5
 */
 
 .app-2CXKsg {
@@ -1358,7 +1358,7 @@
     border: 1px solid rgba(149, 168, 176, .6);
 }
 
-#app-mount .reactionBtn-3I19bq,
+#app-mount .reactionBtn-fVdJIx,
 #app-mount .reactionCount-26U4As,
 #app-mount .reactionCount-SWXh9W {
     color: white;
@@ -1635,7 +1635,9 @@
 .premiumCategorySelected-2KWLhN,
 .premiumCategorySelected-2KWLhN:hover,
 .stickerCategoryGenericSelected-DnO2K8,
-.stickerCategoryGenericSelected-DnO2K8:hover {
+.stickerCategoryGenericSelected-DnO2K8:hover,
+.firstPartyCategorySelected-2zQ3yM,
+.firstPartyCategorySelected-2zQ3yM:hover {
     background-color: #95A8B0 !important;
 }
 
@@ -1811,11 +1813,11 @@
     border-color: black;
 }
 
-.theme-dark .directoryModal-YJsOMv {
+.theme-dark .directoryContainer-z-0pgp {
     background-color: rgba(0, 0, 0, .3);
 }
 
-.directoryModal-YJsOMv a {
+.directoryContainer-z-0pgp a {
     color: #D0DFFF;
 }
 
@@ -2354,7 +2356,7 @@
     box-shadow: none;
 }
 
-.theme-dark .footer-1hTRRZ {
+.theme-dark .footer-Ql9fbL {
     background-color: transparent;
 }
 
