--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2,7 +2,7 @@
  * @name Team Ram
  * @author ShadowDevilsAvenged
  * @description Team Ram is back once again(big request to bring this back)
- * @version 2.6
+ * @version 2.7
 */
 
 /* Ram Main Picture */
@@ -2076,7 +2076,9 @@
 .premiumCategorySelected-2KWLhN,
 .premiumCategorySelected-2KWLhN:hover,
 .stickerCategoryGenericSelected-DnO2K8,
-.stickerCategoryGenericSelected-DnO2K8:hover {
+.stickerCategoryGenericSelected-DnO2K8:hover,
+.firstPartyCategorySelected-2zQ3yM,
+.firstPartyCategorySelected-2zQ3yM:hover {
     background-color: #f3acc5;
 }
 
@@ -2429,7 +2431,7 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.theme-dark .footer-1hTRRZ {
+.theme-dark .footer-Ql9fbL {
     background-color: transparent;
 }
 
@@ -2537,7 +2539,7 @@
     background-color: transparent;
 }
 
-.theme-dark .directoryModal-YJsOMv {
+.theme-dark .directoryContainer-z-0pgp {
     background-color: rgba(0, 0, 0, .4);
 }
 
@@ -2879,13 +2881,13 @@
     color: white;
 }
 
-#app-mount .reactionBtn-3I19bq.forceShowLook-1zmTr- {
+#app-mount .reactionBtn-fVdJIx.forceShowLook-1zmTr- {
     background-color: #f3acc5;
     border: none;
 }
 
-#app-mount .reactionBtn-3I19bq,
-.reactionBtn-3I19bq:hover .icon-1q31jb {
+#app-mount .reactionBtn-fVdJIx,
+.reactionBtn-fVdJIx:hover .icon-fX2J7U {
     color: white;
 }
 
