--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 2.6
+ * @version 2.7
 */
 
 /* Rem Main Picture */
@@ -2045,7 +2045,9 @@
 .premiumCategorySelected-2KWLhN,
 .premiumCategorySelected-2KWLhN:hover,
 .stickerCategoryGenericSelected-DnO2K8,
-.stickerCategoryGenericSelected-DnO2K8:hover {
+.stickerCategoryGenericSelected-DnO2K8:hover,
+.firstPartyCategorySelected-2zQ3yM,
+.firstPartyCategorySelected-2zQ3yM:hover {
     background-color: #6cb4fe;
 }
 
@@ -2398,7 +2400,7 @@
     background-color: rgba(0, 0, 0, .2);
 }
 
-.theme-dark .footer-1hTRRZ {
+.theme-dark .footer-Ql9fbL {
     background-color: transparent;
 }
 
@@ -2506,7 +2508,7 @@
     background-color: transparent;
 }
 
-.theme-dark .directoryModal-YJsOMv {
+.theme-dark .directoryContainer-z-0pgp {
     background-color: rgba(0, 0, 0, .4);
 }
 
@@ -2849,13 +2851,13 @@
     color: white;
 }
 
-#app-mount .reactionBtn-3I19bq.forceShowLook-1zmTr- {
+#app-mount .reactionBtn-fVdJIx.forceShowLook-1zmTr- {
     background-color: #6cb4fe;
     border: none;
 }
 
-#app-mount .reactionBtn-3I19bq,
-.reactionBtn-3I19bq:hover .icon-1q31jb {
+#app-mount .reactionBtn-fVdJIx,
+.reactionBtn-fVdJIx:hover .icon-fX2J7U {
     color: white;
 }
 
