--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 2.1
+ * @version 2.2
 */
 
 .app-2CXKsg, 
@@ -1301,7 +1301,9 @@
 .premiumCategorySelected-2KWLhN, 
 .premiumCategorySelected-2KWLhN:hover, 
 .stickerCategoryGenericSelected-DnO2K8, 
-.stickerCategoryGenericSelected-DnO2K8:hover {
+.stickerCategoryGenericSelected-DnO2K8:hover,
+.firstPartyCategorySelected-2zQ3yM,
+.firstPartyCategorySelected-2zQ3yM:hover {
     background-color: rgba(255, 0, 0, .6);
 }
 
@@ -1584,7 +1586,7 @@
     background-color: rgba(255, 255, 255, .1);
 }
 
-.theme-dark .footer-1hTRRZ {
+.theme-dark .footer-Ql9fbL {
     background-color: transparent;
 }
 
@@ -2020,11 +2022,11 @@
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.theme-dark .directoryModal-YJsOMv {
+.theme-dark .directoryContainer-z-0pgp {
     background-color: transparent;
 }
 
-.directoryModal-YJsOMv a {
+.directoryContainer-z-0pgp a {
     color: #FF0000;
     font-weight: 800;
 }
@@ -2355,18 +2357,18 @@
     background-color: transparent;
 }
 
-.reactionBtn-3I19bq.forceShowLook-1zmTr- {
+.reactionBtn-fVdJIx.forceShowLook-1zmTr- {
     background-color: rgba(255, 255, 255, .1);
     border: 1px solid rgba(255, 255, 255, .1);
 }
 
-.reactionBtn-3I19bq.forceShowLook-1zmTr-:hover {
+.reactionBtn-fVdJIx.forceShowLook-1zmTr-:hover {
     background-color: rgba(255, 255, 255, .2);
     border-color: rgba(255, 255, 255, .2);
 }
 
-.icon-1q31jb, 
-.reactionBtn-3I19bq {
+.icon-fX2J7U, 
+.reactionBtn-fVdJIx {
     color: #F1F1F1;
 }
 
