--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 5.3
+ * @version 5.4
  */
 
 /* Main Background */
@@ -1028,7 +1028,9 @@
     background-color: rgba(0,0,0,.2);
 }
 
-.premiumCategorySelected-2KWLhN, .premiumCategorySelected-2KWLhN:hover, .stickerCategoryGenericSelected-DnO2K8, .stickerCategoryGenericSelected-DnO2K8:hover {
+.premiumCategorySelected-2KWLhN, .premiumCategorySelected-2KWLhN:hover, .stickerCategoryGenericSelected-DnO2K8, .stickerCategoryGenericSelected-DnO2K8:hover,
+.firstPartyCategorySelected-2zQ3yM,
+.firstPartyCategorySelected-2zQ3yM:hover {
     background-color: #912;
 }
 
@@ -2622,19 +2624,19 @@
 	border-radius: 5px;
 }
 
-.reactionBtn-3I19bq.forceShowLook-1zmTr- {
+.reactionBtn-fVdJIx.forceShowLook-1zmTr- {
     background-color: rgba(153, 17, 34, .4);
     border-radius: 4px;
     border: 2px solid transparent;
 }
 
-.reactionBtn-3I19bq.forceShowLook-1zmTr-:hover {
+.reactionBtn-fVdJIx.forceShowLook-1zmTr-:hover {
     background-color: rgba(204, 17, 51, .4);
     border-color: #C13;
 }
 
-.icon-1q31jb,
-.reactionBtn-3I19bq {
+.icon-fX2J7U,
+.reactionBtn-fVdJIx {
 	color: white !important;
 }
 
@@ -3021,7 +3023,7 @@ border-top-color: #912;
 }
 
 /* Newest or Classes That I Have Not Collected Yet */
-.theme-dark .directoryModal-YJsOMv {
+.theme-dark .directoryContainer-z-0pgp {
     background-color: rgba(0, 0, 0, .5);
 }
 
