--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 4.9
+ * @version 5
  */
 
 /* Main Background */
@@ -1875,7 +1875,9 @@ background-color: transparent  !important;
     background-color: rgba(0,0,0,.2);
 }
 
-.premiumCategorySelected-2KWLhN, .premiumCategorySelected-2KWLhN:hover, .stickerCategoryGenericSelected-DnO2K8, .stickerCategoryGenericSelected-DnO2K8:hover {
+.premiumCategorySelected-2KWLhN, .premiumCategorySelected-2KWLhN:hover, .stickerCategoryGenericSelected-DnO2K8, .stickerCategoryGenericSelected-DnO2K8:hover,
+.firstPartyCategorySelected-2zQ3yM,
+.firstPartyCategorySelected-2zQ3yM:hover {
     background-color: #f44;
 }
 
@@ -2821,19 +2823,19 @@ background-color: transparent  !important;
 	border-radius: 5px;
 }
 
-.reactionBtn-3I19bq.forceShowLook-1zmTr- {
+.reactionBtn-fVdJIx.forceShowLook-1zmTr- {
     background-color: rgba(255, 68, 68, .4);
     border-radius: 4px;
     border: 1px solid transparent;
 }
 
-.reactionBtn-3I19bq.forceShowLook-1zmTr-:hover {
+.reactionBtn-fVdJIx.forceShowLook-1zmTr-:hover {
     background-color: rgba(204, 102, 119, .4);
     border-color: #C67;
 }
 
-.icon-1q31jb,
-.reactionBtn-3I19bq {
+.icon-fX2J7U,
+.reactionBtn-fVdJIx {
 	color: white !important;
 }
 
@@ -3218,7 +3220,7 @@ border-top-color: #f44;
 }
 
 /* Newest or Classes That I Have Not Collected Yet */
-.theme-dark .directoryModal-YJsOMv {
+.theme-dark .directoryContainer-z-0pgp {
     background-color: rgba(0, 0, 0, .4);
 }
 
