--- a/My_Theme_Collection/BubbleThemev3.theme.css
+++ b/My_Theme_Collection/BubbleThemev3.theme.css
@@ -11,6 +11,20 @@
     background-image: url(https://images.alphacoders.com/263/263303.jpg);
 }
 
+.small-2xUY-3.root-1CAIjD {
+    height: 450px;
+    width: 500px;
+    padding: 70px 44px;
+}
+
+.small-2xUY-3.root-1CAIjD .header-1ffhsl {
+    transform: translateX(34px);
+}
+
+.small-2xUY-3.root-1CAIjD .footer-IubaaS .button-ejjZWC {
+    transform: translateX(-44px);
+}
+
 .countContainer-3DOo5v {
     background-color: darkblue;
 }
@@ -79,20 +93,48 @@
     border-radius: 50pc;
 }
 
-
-
 .headerBlurb-m6Avyp {
     color: white;
+}
+
+.checkbox-1LuCGM {
+    border-width: 2px;
+}
+
+.box-qwm0Q_ {
+    border-radius: 3px;
+}
+
+.theme-dark .checkbox-1LuCGM {
+    border-color: silver;
+}
+
+.theme-dark .checkbox-1LuCGM[style*="border-color:"] {
+    background-color: rgba(106, 13, 173, .7) !important;
+    border-color: #6a0dad !important;
+}
+
+.theme-dark .checkbox-1LuCGM[style*="border-color:"] path {
+    fill: white;
+}
+
+.divider-3nqZNm {
+    border: none;
 }
 
 .headerBlurb-m6Avyp a {
     color: white;
 }
 
+
+     
+ 
+
 .option-Uc12mm[aria-selected=true]:not(.option-Uc12mm.multi-2vPqc4) {
     color: white !important;
     background-color: black !important;
 }
+
 
 .wrapper-3kah-n::after, .circleIconButton-1VxDrg::after {
     content: "";
@@ -827,11 +869,6 @@
     background-color: transparent;
 }
 
-.theme-dark .scrollableContainer-15eg7h {
-    box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.33);
-    background-image: radial-gradient(circle closest-side at 12px 12px, rgba(255, 255, 255, .65) 10%, rgba(42, 1, 155, 0.49) 100%, rgba(42, 1, 155, 0.49) 100%);
-    background-color: transparent;
-}
 
 .repliedMessage-3Z6XBG:before {
     border-left: 4px solid white;
@@ -1941,14 +1978,17 @@
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -36px 9px -16px rgba(231, 254, 255, 0.33);
     border-radius: 30pc;
-    width: 800px;
-    height: 800px;
-    padding: 0 14px;
-    max-width: 1000px;
+    width: 900px;
+    height: 900px;
 }
 
-.fieldList-in8WkP {
+.accountProfileCard-lbN7n- .userInfo-regn9W {
+    transform: translateX(-40px);
+}
+
+.accountProfileCard-lbN7n- .fieldList-in8WkP {
     background-color: transparent;
+    margin: 0 50px;
 }
 
 .settingsBanner-1eDJ5w {
@@ -1975,15 +2015,30 @@
    top: 205px;
 }
 
-.avatar-3mTjvZ {
+.userInfo-regn9W .avatar-3mTjvZ {
     background-color: transparent;
     border: 7px solid #00aba9;
     position: absolute;
     top: -10pc;
-    left: 20pc;
+    transform: translateX(390px);
     width: 120px !important;
     height: 120px !important;
 }
+
+
+.userInfo-regn9W .avatar-3mTjvZ foreignObject {
+    mask: none;
+}
+
+.userInfo-regn9W .avatar-3mTjvZ  > svg {
+    width: 140px;
+    height: 140px;
+}
+
+.userInfo-regn9W .avatar-3mTjvZ .avatar-31d8He {
+  border-radius: 50%;
+}
+
 
 .cardPrimary-pAe8Ed, .cardPrimary-pAe8Ed.editable-2xfXMr {
     border-color: transparent;
@@ -2623,20 +2678,48 @@
     box-shadow: none;
 }
 /* Active Post Boxes */
-.mainCard-3KBsBI,
-.increasedActivityMainCard-2ry6hI {
+.container-q2_DnH:not(.card-2JNtco.mainCard-3KBsBI) {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 45px 30px, rgba(255, 255, 255, .65) 10%, rgba(0, 0, 0, 0.59) 100%, rgba(0, 0, 0, 0.59) 100%);
     border-color: transparent;
     border-radius: 50px;
-    padding: 15px 12px;
     height: 140px;
 }
 
-.header-1Uy0p6 {
-    padding: 15px 12px;
-    height: 50px;
+.card-2JNtco .mainCard-3KBsBI {
+    background-color: transparent;
+    box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
+    background-image: radial-gradient(circle closest-side at 45px 30px, rgba(255, 255, 255, .65) 10%, rgba(0, 0, 0, 0.59) 100%, rgba(0, 0, 0, 0.59) 100%);
+    border-color: transparent;
+    border-radius: 50pc;
+    padding: 12px 0;
+}
+
+.card-2JNtco .mainCard-3KBsBI .formContainer-1zrOWf,
+.card-2JNtco .mainCard-3KBsBI .form-25Aujy .horizontalPadding-3WQsQ9 {
+    margin: 0 50px;
+}
+
+.container-q2_DnH:not(.card-2JNtco.mainCard-3KBsBI) > .left-3Nlcn5 {
+    margin-left: 15px;
+}
+
+.footer-GXWBBp {
+    background-color: rgba(0, 0, 0, .3);
+    border: none;
+}
+
+.textContainer-36wgKK {
+    background-color: rgba(105, 105, 105, 0.39);
+    border: none;
+    border-radius: 30px 30px 0 0 !important;
+}
+
+.scrollableContainer-15eg7h:not(.formContainer-1zrOWf .scrollableContainer-15eg7h) {
+    box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.33);
+    background-image: radial-gradient(circle closest-side at 12px 12px, rgba(255, 255, 255, .65) 10%, rgba(42, 1, 155, 0.49) 100%, rgba(42, 1, 155, 0.49) 100%);
+    background-color: transparent;
 }
 
 .header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
@@ -2656,6 +2739,7 @@
     background: none;
     box-shadow: none;
     border: none;
+    border-radius: 3px;
 }
 /* Tag Holder */
 .container-2IhveL {
@@ -3571,6 +3655,23 @@
     box-shadow: none;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .theme-dark .elevationBorderLow-3_3rXL {
     box-shadow: none;
 }
@@ -4466,27 +4567,6 @@
     background: none;
 }
 
-.checkbox-1LuCGM {
-    border-width: 2px;
-}
-
-.box-qwm0Q_ {
-    border-radius: 3px;
-}
-
-.theme-dark .checkbox-1LuCGM {
-    border-color: silver;
-}
-
-.theme-dark .checkbox-1LuCGM[style*="border-color:"] {
-    background-color: rgba(106, 13, 173, .7) !important;
-    border-color: #6a0dad !important;
-}
-
-.theme-dark .checkbox-1LuCGM[style*="border-color:"] path {
-    fill: white;
-}
-
 .footer-IubaaS {
     background-color: transparent;
 }
@@ -4498,14 +4578,6 @@
 
 .modalFooter-Ywt9Jo {
     background-color: transparent!important;
-}
-
-.bd-sidebar-header h2 {
-    color: white;
-}
-
-.divider-3nqZNm {
-    border: none;
 }
 
 .changelog-2zmJ4c,
