Took care of the sneaky class changes

--- a/My_Theme_Collection/BubbleThemev3.theme.css
+++ b/My_Theme_Collection/BubbleThemev3.theme.css
@@ -2,7 +2,7 @@
  * @name Bubble Theme v3
  * @author ShadowDevilsAvenged
  * @description Bubbles, Bubbles and more Bubbles.
- * @version 4.2
+ * @version 4.3
  */
 
 .app-2CXKsg {
@@ -561,7 +561,7 @@
     display: none;
 }
 
-.content-1gYQeQ {
+.link-1_kTxV {
     border-radius: 50px;
 }
 
@@ -576,8 +576,8 @@
     color: white;
 }
 
-.modeUnread-3Cxepe .content-1gYQeQ,
-.modeUnread-3Cxepe:hover .content-1gYQeQ {
+.modeUnread-3Cxepe .link-1_kTxV,
+.modeUnread-3Cxepe:hover .link-1_kTxV {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.33);
     background-image: radial-gradient(circle closest-side at 10px 10px, rgba(255, 255, 255, .65) 10%, rgba(42, 1, 155, 0.19) 100%, rgba(42, 1, 155, 0.19) 100%);
@@ -2024,8 +2024,8 @@
     color: #00aba9;
 }
 
-.modeSelected-3DmyhH .content-1gYQeQ,
-.modeSelected-3DmyhH:hover .content-1gYQeQ {
+.modeSelected-3DmyhH .link-1_kTxV,
+.modeSelected-3DmyhH:hover .link-1_kTxV {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.53), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.33);
     background-image: radial-gradient(circle closest-side at 10px 10px, rgba(255, 255, 255, .65) 10%, rgba(35, 206, 77, 0.19) 100%, rgba(35, 206, 77, 0.19) 100%);
@@ -2764,7 +2764,7 @@
     border: 3px solid transparent;
 }
 
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 45px 30px, rgba(255, 255, 255, .65) 10%, rgba(0, 0, 139, 0.39) 100%, rgba(0, 0, 139, 0.39) 100%);
@@ -2834,7 +2834,7 @@
     border: 1px solid transparent;
 }
 
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
     background-color: transparent;
     box-shadow: inset 3px 3px 9px 3px rgba(231, 254, 255, 0.63), inset -8px -11px 9px -16px rgba(231, 254, 255, 0.53);
     background-image: radial-gradient(circle closest-side at 45px 30px, rgba(255, 255, 255, .65) 10%, rgba(0, 0, 139, 0.59) 100%, rgba(0, 0, 139, 0.59) 100%);
