--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -2,7 +2,7 @@
  * @name New Akame Ga Kill! Theme
  * @author ShadowDevilsAvenged
  * @description Newer Akame Ga Kill! theme for my return
- * @version 5.4
+ * @version 5.5
  */
 
 /* Main Background */
@@ -2138,7 +2138,7 @@
     color: lightsalmon;
 }
 
-.wrapper-NhbLHG:hover .content-1gYQeQ {
+.wrapper-NhbLHG:hover .link-1_kTxV {
     background-color: rgba(204, 17, 51, .37);
     border: 2px outset #C13;
 }
@@ -2147,7 +2147,7 @@
     color: silver;
 }
 
-.modeSelected-3DmyhH .content-1gYQeQ, .modeSelected-3DmyhH:hover .content-1gYQeQ {
+.modeSelected-3DmyhH .link-1_kTxV, .modeSelected-3DmyhH:hover .link-1_kTxV {
     background-color: rgba(153, 17, 33, .72);
     border: 2px inset #912;
 }
@@ -2442,7 +2442,7 @@
     background-color: #912;
     border: 3px solid transparent;
 }
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
     background-color: rgba(204, 17, 51, .4);
     border-color: #C13;
     box-shadow: none;
@@ -2470,7 +2470,7 @@
 .header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
     border: 2px solid #C13;
 }
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
     background-color: rgba(153, 17, 34, .7);
 }
 .headerBorder-jrk0Ic {
