--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -2,7 +2,7 @@
  * @name New Rem Theme
  * @author ShadowDevilsAvenged
  * @description Newer Rem theme for my return
- * @version 5
+ * @version 5.1
  */
 
  .app-2CXKsg {
@@ -1756,11 +1756,11 @@
     background-color: rgba(0, 0, 0, 0.68);
 }
 
-.wrapper-NhbLHG:hover .content-1gYQeQ {
+.wrapper-NhbLHG:hover .link-1_kTxV {
     background-color: rgba(0, 0, 0, 0.28);
 }
 
-.modeSelected-3DmyhH .content-1gYQeQ, .modeSelected-3DmyhH:hover .content-1gYQeQ {
+.modeSelected-3DmyhH .link-1_kTxV, .modeSelected-3DmyhH:hover .link-1_kTxV {
     background-color: rgba(97, 165, 216, .5);
     border: 3px inset #61A5D8;
 }
@@ -2489,7 +2489,7 @@
     background-color: #61A5D8;
     border: 3px solid transparent;
 }
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
     background-color: rgba(118, 170, 217, .4);
     border-color: #76AAD9;
     box-shadow: none;
@@ -2517,7 +2517,7 @@
 .header-1Uy0p6:hover:not(.headerBorder-jrk0Ic) {
     border: 2px solid #76AAD9;
 }
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
     background-color: rgba(97, 165, 216, .7);
     -webkit-transform: none;
     transform: none;
