--- a/My_Theme_Collection/NightTimeMountain.theme.css
+++ b/My_Theme_Collection/NightTimeMountain.theme.css
@@ -2,7 +2,7 @@
  * @name Night Time Mountain
  * @author ShadowDevilsAvenged
  * @description Nice view of the mountain in the night time
- * @version 2.5
+ * @version 2.6
 */
 
 .app-2CXKsg {
@@ -2435,11 +2435,11 @@
     background-color: rgba(149, 168, 176, .3);
 }
 
-.content-1gYQeQ {
+.link-1_kTxV {
     border-radius: 0;
 }
 
-.wrapper-NhbLHG:hover .content-1gYQeQ {
+.wrapper-NhbLHG:hover .link-1_kTxV {
     background-color: transparent;
 }
 
@@ -2450,8 +2450,8 @@
     color: #e2e2e2;
 }
 
-.modeSelected-3DmyhH .content-1gYQeQ, 
-.modeSelected-3DmyhH:hover .content-1gYQeQ {
+.modeSelected-3DmyhH .link-1_kTxV, 
+.modeSelected-3DmyhH:hover .link-1_kTxV {
     background-color: transparent;
     border-bottom: 2px solid #95A8B0;
 }
@@ -2785,13 +2785,13 @@
     color: #D0DFFF !important;
 }
 
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
     background-color: rgba(149, 168, 176, .2);
     box-shadow: 2px 2px 5px 2px rgba(149, 168, 176, .1);
     transform: translateY(-2px);
 }
 
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
     background-color: rgba(149, 168, 176, .3);
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, .4);
 }
