--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 5
+ * @version 5.1
  */
 
  #app-mount .app-2CXKsg {
@@ -1327,11 +1327,11 @@
   background-color: transparent;
 }
 
-.wrapper-NhbLHG:hover .content-1gYQeQ, .listDefault-2F-w65 .clickable-1ctZ-H:hover .content-1Tgc42 {
+.wrapper-NhbLHG:hover .link-1_kTxV, .listDefault-2F-w65 .clickable-1ctZ-H:hover .content-1Tgc42 {
   background-color: rgba(173, 57, 80, .2);
 }
 
-.modeSelected-3DmyhH .content-1gYQeQ, .modeSelected-3DmyhH:hover .content-1gYQeQ, .listDefault-2F-w65 .clickable-1ctZ-H.selected-1oxcpH .content-1Tgc42 {
+.modeSelected-3DmyhH .link-1_kTxV, .modeSelected-3DmyhH:hover .link-1_kTxV, .listDefault-2F-w65 .clickable-1ctZ-H.selected-1oxcpH .content-1Tgc42 {
   background-color: #9b2742;
 }
 
@@ -3038,7 +3038,7 @@
   background-color: #9b2742;
   border: 3px solid transparent;
 }
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
   background-color: rgba(173, 57, 80, .4);
   border-color: #ad3950;
   box-shadow: none;
@@ -3066,7 +3066,7 @@
 .interactiveCard-2iMtdk:active, .interactiveCard-2iMtdk:hover {
     border: 2px solid black;
 }
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
   background-color: rgba(155, 39, 66, .7);
   -webkit-transform: none;
   transform: none;
