--- a/My_Theme_Collection/TeamRem.theme.css
+++ b/My_Theme_Collection/TeamRem.theme.css
@@ -2,7 +2,7 @@
  * @name Team Rem
  * @author ShadowDevilsAvenged
  * @description Team Rem is back once again(big request to bring this back)
- * @version 2.7
+ * @version 2.8
 */
 
 /* Rem Main Picture */
@@ -2591,13 +2591,13 @@
     color: #6cb4fe;
 }
 
-.modeSelected-3DmyhH .content-1gYQeQ, 
-.modeSelected-3DmyhH:hover .content-1gYQeQ,
+.modeSelected-3DmyhH .link-1_kTxV, 
+.modeSelected-3DmyhH:hover .link-1_kTxV,
 .listDefault-2F-w65 .clickable-1ctZ-H.selected-1oxcpH .content-1Tgc42 {
     background-color: rgba(108, 180, 254, .6) !important;
 }
 
-.wrapper-NhbLHG:hover .content-1gYQeQ,
+.wrapper-NhbLHG:hover .link-1_kTxV,
 .listDefault-2F-w65 .clickable-1ctZ-H:hover .content-1Tgc42 {
     background-color: rgba(255, 255, 255, .11);
 }
@@ -2807,12 +2807,12 @@
     border-radius: 4px;
 }
 
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
     background-color: rgba(108, 180, 254, .4);
     box-shadow: none;
 }
 
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
     background-color: rgba(108, 180, 254, .4);
     border: 1px solid #6cb4fe;
 }
