--- a/My_Theme_Collection/NewBNHA.theme.css
+++ b/My_Theme_Collection/NewBNHA.theme.css
@@ -2,7 +2,7 @@
  * @name New BNHA Theme
  * @author ShadowDevilsAvenged
  * @description Newer BNHA theme for my return
- * @version 5
+ * @version 5.1
  */
 
 /* Main Background */
@@ -2032,12 +2032,12 @@
     background-color: #2AB;
 }
 
-.modeSelected-3DmyhH .content-1gYQeQ, .modeSelected-3DmyhH:hover .content-1gYQeQ {
+.modeSelected-3DmyhH .link-1_kTxV, .modeSelected-3DmyhH:hover .link-1_kTxV {
     background-color: rgba(17, 188, 204, .47) !important;
     border:none !important;
 }
 
-.wrapper-NhbLHG:hover .content-1gYQeQ {
+.wrapper-NhbLHG:hover .link-1_kTxV {
     background-color: transparent;
     border: 2px solid #2AB;
 }
@@ -2357,7 +2357,7 @@
 .numberBadge-37OJ3S[style*="background-color:"] {
     background-color: #2AB !important;
 }
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
     background-color: rgba(17, 187, 204, .4);
     border-color: #1BC;
     box-shadow: none;
@@ -2385,7 +2385,7 @@
 .chat-3t9F_n:before {
     box-shadow: none;
 }
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
     background-color: rgba(34, 170, 187, .8);
 }
 .headerBorder-jrk0Ic {
