--- a/My_Theme_Collection/NewKemonoFriends.theme.css
+++ b/My_Theme_Collection/NewKemonoFriends.theme.css
@@ -2,7 +2,7 @@
  * @name New Kemono Friends Theme
  * @author ShadowDevilsAvenged
  * @description Newer Kemono Friends theme for my return
- * @version 5
+ * @version 5.1
  */
 
 /* Main Background */
@@ -2215,7 +2215,7 @@ background-color: transparent  !important;
     opacity: .5;
 }
 
-.wrapper-NhbLHG:hover .content-1gYQeQ {
+.wrapper-NhbLHG:hover .link-1_kTxV {
     background-color: rgba(204, 102, 119, .39);
     border: 2px outset rgba(204, 102, 119, .49);
 }
@@ -2230,7 +2230,7 @@ background-color: transparent  !important;
     opacity: 1;
 }
 
-.modeSelected-3DmyhH .content-1gYQeQ, .modeSelected-3DmyhH:hover .content-1gYQeQ {
+.modeSelected-3DmyhH .link-1_kTxV, .modeSelected-3DmyhH:hover .link-1_kTxV {
     background-color: rgba(255, 68, 68, .52);
     border: 2px inset #f44;
 }
@@ -2634,7 +2634,7 @@ background-color: transparent  !important;
     background-color: #F44;
     border: 3px solid transparent;
 }
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
     background-color: rgba(204, 102, 119, .6);
     border-color: #C67;
     box-shadow: none;
@@ -2662,7 +2662,7 @@ background-color: transparent  !important;
 .chat-3t9F_n:before {
     box-shadow: none;
 }
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
     background-color: rgba(255, 68, 68, .8);
     -webkit-transform: none;
     transform: none;
