--- a/My_Theme_Collection/Old-BNHA-Theme.theme.css
+++ b/My_Theme_Collection/Old-BNHA-Theme.theme.css
@@ -2,7 +2,7 @@
  * @name Old BNHA Theme Returns
  * @author ShadowDevilsAvenged
  * @description Say Hello to the BNHA theme once again
- * @version 5.1
+ * @version 5.2
 */
 
 .avatarDecoration-34OC0G {
@@ -446,7 +446,7 @@ textarea,
     color: white !important;
 }
 
-.theme-dark .wrapper-NhbLHG:hover .content-1gYQeQ,
+.theme-dark .wrapper-NhbLHG:hover .link-1_kTxV,
 .theme-dark .listDefault-2F-w65 .clickable-1ctZ-H:hover .content-1Tgc42 {
     background-color: rgba(0, 140, 153, 0.26);
 }
@@ -461,8 +461,8 @@ textarea,
     color: white;
 }
 
-.theme-dark .wrapper-NhbLHG.modeSelected-3DmyhH .content-1gYQeQ,
-.theme-dark .wrapper-NhbLHG.modeSelected-3DmyhH:hover .content-1gYQeQ,
+.theme-dark .wrapper-NhbLHG.modeSelected-3DmyhH .link-1_kTxV,
+.theme-dark .wrapper-NhbLHG.modeSelected-3DmyhH:hover .link-1_kTxV,
 .theme-dark .listDefault-2F-w65 .clickable-1ctZ-H.selected-1oxcpH .content-1Tgc42 {
     background-color: #008c99 !important;
 }
@@ -474,7 +474,7 @@ textarea,
     color: white;
 }
 
-.content-1gYQeQ,
+.link-1_kTxV,
 .content-1Tgc42 {
     border-radius: 8px;
 }
@@ -2478,7 +2478,7 @@ textarea,
     border: 3px solid transparent;
 }
 
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
     background-color: rgba(0, 140, 153, .5);
     border-color: #008c99;
     box-shadow: none;
@@ -2514,7 +2514,7 @@ textarea,
     border: 2px solid #008c99;
 }
 
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
     background-color: rgba(0, 140, 153, .8);
 }
 
