--- a/My_Theme_Collection/Youtube_Nation.theme.css
+++ b/My_Theme_Collection/Youtube_Nation.theme.css
@@ -2,7 +2,7 @@
  * @name Youtube Nation
  * @author ShadowDevilsAvenged
  * @description The Storage of All Videos
- * @version 2.2
+ * @version 2.3
 */
 
 .app-2CXKsg, 
@@ -2432,12 +2432,12 @@
     color: #3ea6ff;
 }
 
-.content-1gYQeQ {
+.link-1_kTxV {
     border-radius: 12px;
 }
 
-.modeSelected-3DmyhH .content-1gYQeQ, 
-.modeSelected-3DmyhH:hover .content-1gYQeQ {
+.modeSelected-3DmyhH .link-1_kTxV, 
+.modeSelected-3DmyhH:hover .link-1_kTxV {
     background-color: #FF0000 !important;
 }
 
@@ -2470,7 +2470,7 @@
     color: #F1F1F1;
 }
 
-.wrapper-NhbLHG:hover .content-1gYQeQ {
+.wrapper-NhbLHG:hover .link-1_kTxV {
     background-color: rgba(255, 255, 255, .1);
 }
 
@@ -3020,11 +3020,11 @@
     background-color: #FF0000;
 }
 
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
     border: 1px solid rgba(255, 255, 255, .2);
 }
 
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
     border: 2px solid rgba(255, 255, 255, .2);
 }
 
