--- a/Raw Link Requests/Old-AkameGaKill-Theme.theme.css
+++ b/Raw Link Requests/Old-AkameGaKill-Theme.theme.css
@@ -2,13 +2,13 @@
  * @name Old-Akame_Ga_Kill-Theme
  * @author ShadowDevilsAvenged
  * @description Akame from Akame No Kill
- * @version 5
+ * @version 5.1
  */
 
  #app-mount .app-2CXKsg {
   background-color: transparent;
   background-size: cover;
-  background-image: url(https://images5.alphacoders.com/542/542751.jpg);
+  background-image: url(https://cdn.discordapp.com/attachments/1048274418578771968/1123302273439760595/542751.jpg);
 }
 
 .executedCommand-14-SNW, .repliedMessage-3Z6XBG, .threadMessageAccessory-2W9mjC {
@@ -1327,11 +1327,11 @@
   background-color: transparent;
 }
 
-.wrapper-NhbLHG:hover .content-1gYQeQ, .listDefault-2F-w65 .clickable-1ctZ-H:hover .content-1Tgc42 {
+.wrapper-NhbLHG:hover .link-1_kTxV, .listDefault-2F-w65 .clickable-1ctZ-H:hover .content-1Tgc42 {
   background-color: rgba(173, 57, 80, .2);
 }
 
-.modeSelected-3DmyhH .content-1gYQeQ, .modeSelected-3DmyhH:hover .content-1gYQeQ, .listDefault-2F-w65 .clickable-1ctZ-H.selected-1oxcpH .content-1Tgc42 {
+.modeSelected-3DmyhH .link-1_kTxV, .modeSelected-3DmyhH:hover .link-1_kTxV, .listDefault-2F-w65 .clickable-1ctZ-H.selected-1oxcpH .content-1Tgc42 {
   background-color: #9b2742;
 }
 
@@ -1789,8 +1789,7 @@
 }
 
 
-.navButtonActive-1EqC5l,
-.navButtonActive-fwiUKp {
+.navButtonActive-1EqC5l {
   border-left: none;
   background: #212121;
   box-shadow: none;
@@ -3038,7 +3037,7 @@
   background-color: #9b2742;
   border: 3px solid transparent;
 }
-.container-2qVG6q:hover {
+.container-q2_DnH:hover {
   background-color: rgba(173, 57, 80, .4);
   border-color: #ad3950;
   box-shadow: none;
@@ -3066,7 +3065,7 @@
 .interactiveCard-2iMtdk:active, .interactiveCard-2iMtdk:hover {
     border: 2px solid black;
 }
-.theme-dark .container-2qVG6q.isOpen-2OXbFs {
+.theme-dark .container-q2_DnH.isOpen-2Gyel_ {
   background-color: rgba(155, 39, 66, .7);
   -webkit-transform: none;
   transform: none;
